# retrograde

./: .gitignore  README.md  flake.nix  meson.build
nix/: buildPackage.nix  devShell.nix  formatter.nix
src/: main.cpp
src/analysis/cfg/: cfg_builder.cpp  cfg_builder.h
src/analysis/dataflow/: dataflow.h
src/core/config/: config.h
src/core/error/: error.h
src/core/types/: types.h
src/decompiler/: decompiler.cpp  decompiler.h
src/disassemly/architecture/: arch.cpp  arch.h
src/disassemly/file/: disassembler.cpp  disassembler.h
src/emitter/: emitter.cpp  emitter.h
src/gui/: CMakeLists.txt  main.cpp  meson.build  retrograde.cpp  retrograde.h
src/ir/: basic_block.h  function.h  instruction.h
src/utils/: utils.h
src/wrapper/: wrapper.cpp  wrapper.h
